--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ qrcode[pil]==7.3.1
 python-alipay-sdk==3.0.4
 passlib==1.7.4
 sqlmodel==0.0.6
+starlette~=0.17.1
+pydantic~=1.10.13
+uvicorn~=0.17.6
